--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "url": "https://github.com/mkarajohn/react-revealjs-with-code-surfer"
   },
   "scripts": {
+    "prepublishOnly": "npm run build",
     "build": "npm run build:esm & npm run build:cjs",
     "build:esm": "rimraf ./dist/esm && tsc --module esnext --outDir dist/esm",
     "build:cjs": "rimraf ./dist/cjs && tsc --module commonjs --outDir dist/cjs",
