--- a/package.json
+++ b/package.json
@@ -31,8 +31,8 @@
   },
   "license": "MIT",
   "dependencies": {
-    "@code-surfer/standalone": "^3.1.1",
-    "@code-surfer/themes": "^3.1.1",
+    "@code-surfer/standalone": "3.1.1",
+    "@code-surfer/themes": "3.1.1",
     "use-spring": "^0.2.4",
     "uuid": "^9.0.0"
   },
