--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A collection of React components that make it easy to create presentation slides using code-surfer with reveal.js",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
