--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "outDir": "dist",
+    "declarationDir": "dist/types",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "declaration": true,
     "moduleResolution": "node",
